# pptx-to-pdf

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py
src/pptx_to_pdf/: __init__.py  converter.py  main.py  merger.py  ui.py
tests/: __init__.py  test_converter.py  test_merger.py  test_ui.py
